# learnflow

backend/: .coverage  .env.example  .gitignore  .snyk  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  deps.py  emailer.py  jwt_service.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: auth.py
backend/migrations/: env.py
backend/migrations/versions/: abb520c48034_initial_schema.py
backend/scripts/: export_openapi.py  generate_keys.py
backend/tests/: conftest.py  test_auth.py  test_coverage_edges.py
docs/: UC-1-requirements.md  openapi.json
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: auth.ts
frontend/src/auth/: AuthPrototype.tsx
frontend/src/ds/: Alert.tsx  Button.tsx  Checkbox.tsx  Input.tsx  Logo.tsx  PasswordInput.tsx  icons.tsx
frontend/src/styles/: global.css
frontend/src/styles/tokens/: colors.css  fonts.css  spacing.css  typography.css
